Fix overflowing layout

--- a/src/Game/components/GameSettings/styles.scss
+++ b/src/Game/components/GameSettings/styles.scss
@@ -6,11 +6,6 @@
     transition: opacity 0.3s ease;
     opacity: 0;
 
-    &.overlay {
-      padding: 120px 0;
-      display: grid;
-    }
-
     &:not(.visible) {
       visibility: hidden;
     }
